realign homepage and fix post-list CSS

--- a/theme/static/styles.css
+++ b/theme/static/styles.css
@@ -3,7 +3,7 @@ a, a:visited { color: #0000ff; }
 nav ul { list-style: none; padding: 0; display: flex; flex-direction: row; }
 nav ul li { padding-right: 0.5rem;}
 img { max-width: 100%; }
-.post-list { padding: 0; }
+.post-list { padding: 0; padding-inline-start: 0; }
 .post-list-item { display: flex; list-style: none; align-items: baseline; }
 .post-list-item time { padding-right: 0.5rem; white-space: nowrap; }
 .post-list-item a { flex-grow: 1; white-space: normal; }
